@@ -1,3 +1,5 @@
+* Support Binary field in CSV import/export
+
 Version 6.0.0 - 2021-05-03
 * Bug fixes (see mercurial logs for details)
 * Support printing zip archive
